[gd_scene load_steps=82 format=3 uid="uid://bn607pw17qiv3"]

[ext_resource type="Script" path="res://player/scripts/player.gd" id="1_chvxr"]
[ext_resource type="Texture2D" uid="uid://bsnjslxcwo0d2" path="res://player/sprite/walk.png" id="1_up7ul"]
[ext_resource type="Texture2D" uid="uid://die2pdwbhfm0l" path="res://player/sprite/idle.png" id="1_yokk4"]
[ext_resource type="Texture2D" uid="uid://c0rfrt0086h6e" path="res://player/sprite/punch.png" id="3_3kciy"]
[ext_resource type="Texture2D" uid="uid://dkxmnt1y4bicr" path="res://player/sprite/walk left.png" id="3_7oytj"]
[ext_resource type="Texture2D" uid="uid://c6m5tnsvlt73s" path="res://Sprite Sheet Packer (3).png" id="6_pkfgv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_82cc3"]
size = Vector2(43, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsyt3"]
atlas = ExtResource("1_yokk4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnaxe"]
atlas = ExtResource("1_yokk4")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n3ht"]
atlas = ExtResource("1_yokk4")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjtnj"]
atlas = ExtResource("1_yokk4")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0dnk"]
atlas = ExtResource("1_yokk4")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4neq"]
atlas = ExtResource("1_yokk4")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_igi3h"]
atlas = ExtResource("1_yokk4")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_by1jt"]
atlas = ExtResource("1_yokk4")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pquk7"]
atlas = ExtResource("3_3kciy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf4e6"]
atlas = ExtResource("3_3kciy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpp5f"]
atlas = ExtResource("3_3kciy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p2w5"]
atlas = ExtResource("3_3kciy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnrmv"]
atlas = ExtResource("3_3kciy")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h84kp"]
atlas = ExtResource("3_3kciy")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_puf8g"]
atlas = ExtResource("3_3kciy")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsqx3"]
atlas = ExtResource("3_3kciy")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xots6"]
atlas = ExtResource("3_7oytj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp07k"]
atlas = ExtResource("3_7oytj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4grf"]
atlas = ExtResource("3_7oytj")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgotv"]
atlas = ExtResource("3_7oytj")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tarr7"]
atlas = ExtResource("3_7oytj")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r4gn"]
atlas = ExtResource("3_7oytj")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5so73"]
atlas = ExtResource("3_7oytj")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j85rw"]
atlas = ExtResource("3_3kciy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeb73"]
atlas = ExtResource("3_3kciy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pui7w"]
atlas = ExtResource("3_3kciy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq5wv"]
atlas = ExtResource("3_3kciy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gcd0"]
atlas = ExtResource("3_3kciy")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eunur"]
atlas = ExtResource("3_3kciy")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eo8rl"]
atlas = ExtResource("3_3kciy")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_be20e"]
atlas = ExtResource("3_3kciy")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_174vm"]
atlas = ExtResource("1_up7ul")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kytsp"]
atlas = ExtResource("1_up7ul")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmhyv"]
atlas = ExtResource("1_up7ul")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcolw"]
atlas = ExtResource("1_up7ul")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rnki"]
atlas = ExtResource("1_up7ul")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0383"]
atlas = ExtResource("1_up7ul")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn1n5"]
atlas = ExtResource("1_up7ul")
region = Rect2(384, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6vulq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsyt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnaxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n3ht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjtnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0dnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4neq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igi3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_by1jt")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pquk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf4e6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpp5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p2w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnrmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h84kp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puf8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsqx3")
}],
"loop": false,
"name": &"punch",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xots6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp07k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4grf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgotv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tarr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r4gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5so73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j85rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xeb73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pui7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq5wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gcd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eunur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eo8rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_be20e")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_174vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kytsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmhyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcolw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rnki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0383")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn1n5")
}],
"loop": true,
"name": &"walk_right",
"speed": 9.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5ssvr"]
radius = 24.0208

[sub_resource type="AtlasTexture" id="AtlasTexture_yd5jb"]
atlas = ExtResource("6_pkfgv")
region = Rect2(0, 845, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_52o4j"]
atlas = ExtResource("6_pkfgv")
region = Rect2(419, 780, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4o16"]
atlas = ExtResource("6_pkfgv")
region = Rect2(419, 455, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu887"]
atlas = ExtResource("6_pkfgv")
region = Rect2(0, 455, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_13b0i"]
atlas = ExtResource("6_pkfgv")
region = Rect2(419, 390, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tunc"]
atlas = ExtResource("6_pkfgv")
region = Rect2(0, 390, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5ndb"]
atlas = ExtResource("6_pkfgv")
region = Rect2(0, 325, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n13i"]
atlas = ExtResource("6_pkfgv")
region = Rect2(419, 260, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_1of2h"]
atlas = ExtResource("6_pkfgv")
region = Rect2(0, 260, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ogjq"]
atlas = ExtResource("6_pkfgv")
region = Rect2(419, 195, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bvj2"]
atlas = ExtResource("6_pkfgv")
region = Rect2(0, 195, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps32i"]
atlas = ExtResource("6_pkfgv")
region = Rect2(419, 130, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_5adxp"]
atlas = ExtResource("6_pkfgv")
region = Rect2(0, 780, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxh4p"]
atlas = ExtResource("6_pkfgv")
region = Rect2(0, 130, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjn1s"]
atlas = ExtResource("6_pkfgv")
region = Rect2(419, 65, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_67g8f"]
atlas = ExtResource("6_pkfgv")
region = Rect2(0, 65, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfa61"]
atlas = ExtResource("6_pkfgv")
region = Rect2(419, 0, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6rxl"]
atlas = ExtResource("6_pkfgv")
region = Rect2(838, 260, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_le6gl"]
atlas = ExtResource("6_pkfgv")
region = Rect2(838, 195, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ptco"]
atlas = ExtResource("6_pkfgv")
region = Rect2(838, 130, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3313"]
atlas = ExtResource("6_pkfgv")
region = Rect2(838, 65, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_wi36g"]
atlas = ExtResource("6_pkfgv")
region = Rect2(838, 0, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4p55"]
atlas = ExtResource("6_pkfgv")
region = Rect2(419, 845, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rf6c"]
atlas = ExtResource("6_pkfgv")
region = Rect2(419, 715, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_e41as"]
atlas = ExtResource("6_pkfgv")
region = Rect2(0, 715, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_n00l8"]
atlas = ExtResource("6_pkfgv")
region = Rect2(419, 325, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0thj"]
atlas = ExtResource("6_pkfgv")
region = Rect2(0, 0, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_48r6m"]
atlas = ExtResource("6_pkfgv")
region = Rect2(419, 650, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjcjb"]
atlas = ExtResource("6_pkfgv")
region = Rect2(419, 585, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_buajl"]
atlas = ExtResource("6_pkfgv")
region = Rect2(419, 585, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5tmt"]
atlas = ExtResource("6_pkfgv")
region = Rect2(0, 585, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vas4"]
atlas = ExtResource("6_pkfgv")
region = Rect2(419, 520, 419, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq1am"]
atlas = ExtResource("6_pkfgv")
region = Rect2(0, 520, 419, 65)

[sub_resource type="SpriteFrames" id="SpriteFrames_bvned"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd5jb")
}],
"loop": true,
"name": &"default.0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_52o4j")
}],
"loop": true,
"name": &"default.1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4o16")
}],
"loop": true,
"name": &"default.10",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu887")
}],
"loop": true,
"name": &"default.11",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_13b0i")
}],
"loop": true,
"name": &"default.12",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tunc")
}],
"loop": true,
"name": &"default.13",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5ndb")
}],
"loop": true,
"name": &"default.14",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n13i")
}],
"loop": true,
"name": &"default.15",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1of2h")
}],
"loop": true,
"name": &"default.16",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ogjq")
}],
"loop": true,
"name": &"default.17",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bvj2")
}],
"loop": true,
"name": &"default.18",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps32i")
}],
"loop": true,
"name": &"default.19",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5adxp")
}],
"loop": true,
"name": &"default.2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxh4p")
}],
"loop": true,
"name": &"default.20",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjn1s")
}],
"loop": true,
"name": &"default.21",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_67g8f")
}],
"loop": true,
"name": &"default.22",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfa61")
}],
"loop": true,
"name": &"default.23",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6rxl")
}],
"loop": true,
"name": &"default.24",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_le6gl")
}],
"loop": true,
"name": &"default.25",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ptco")
}],
"loop": true,
"name": &"default.26",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3313")
}],
"loop": true,
"name": &"default.27",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wi36g")
}],
"loop": true,
"name": &"default.28",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4p55")
}],
"loop": true,
"name": &"default.29",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rf6c")
}],
"loop": true,
"name": &"default.3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e41as")
}],
"loop": true,
"name": &"default.30",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n00l8")
}],
"loop": true,
"name": &"default.31",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0thj")
}],
"loop": true,
"name": &"default.32",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_48r6m")
}],
"loop": true,
"name": &"default.4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjcjb")
}],
"loop": true,
"name": &"default.5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_buajl")
}],
"loop": true,
"name": &"default.6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5tmt")
}],
"loop": true,
"name": &"default.7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vas4")
}],
"loop": true,
"name": &"default.8",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq1am")
}],
"loop": true,
"name": &"default.9",
"speed": 5.0
}]

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Player"]]
position = Vector2(335, 192)
script = ExtResource("1_chvxr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -20)
shape = SubResource("RectangleShape2D_82cc3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -18)
sprite_frames = SubResource("SpriteFrames_6vulq")
animation = &"punch"
frame = 7
frame_progress = 1.0

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(-2, -21)
shape = SubResource("CircleShape2D_5ssvr")

[node name="atack_cooldwon" type="Timer" parent="."]
wait_time = 7.02

[node name="UI" type="Node2D" parent="."]
position = Vector2(-335, -192)

[node name="Health_bar" type="CanvasLayer" parent="UI"]

[node name="hbarAnim" type="AnimatedSprite2D" parent="UI/Health_bar"]
position = Vector2(236, 61)
sprite_frames = SubResource("SpriteFrames_bvned")
animation = &"default.30"

[node name="addStamina" type="Timer" parent="."]
wait_time = 0.772

[node name="deleteStamina" type="Timer" parent="."]
wait_time = 0.46

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="atack_cooldwon" to="." method="_on_atackcooldwon_timeout"]
[connection signal="timeout" from="addStamina" to="." method="_on_add_stamina_timeout"]
[connection signal="timeout" from="deleteStamina" to="." method="_on_delete_stamina_timeout"]
